Started exporting common functions

--- a/5_power_output.ipynb
+++ b/5_power_output.ipynb
@@ -268,25 +268,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e8500434-1ca3-4744-bd31-0d859614cb98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_hourly_cf(year, gen_type, method=\"van_der_Wiel\"):\n",
-    "    \"\"\"\n",
-    "    Load one year of hourly generation data.\n",
-    "    \n",
-    "    year: int, year to load\n",
-    "    gen_type: str, 'wind' or 'solar'\n",
-    "    method: str, method used to compute capacity factor, e.g. 'van_der_Wiel'\n",
-    "    \"\"\"\n",
-    "    cf_path = \"/g/data/w42/dr6273/work/projects/Aus_energy/production_metrics/\" + gen_type + \"/capacity_factor/\" + method + \"/\"\n",
-    "    return xr.open_mfdataset(cf_path + gen_type + \"_capacity_factor_\" + method + \"_era5_hourly_\" + str(year) + \"_Aus.nc\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "604a2134-dac1-4a9a-8029-fb6daae0d7bb",
    "metadata": {},
@@ -309,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = load_hourly_cf(2023, \"solar\", method=\"van_der_Wiel\").capacity_factor.isel(time=0).compute()"
+    "template = fn.load_hourly_cf(2023, \"solar\", method=\"van_der_Wiel\").capacity_factor.isel(time=0).compute()"
    ]
   },
   {
@@ -786,8 +767,8 @@
     "    \"\"\"\n",
     "    site_power_list = []\n",
     "    for year in years:\n",
-    "        w = load_hourly_cf(year, \"wind\", method=method).capacity_factor\n",
-    "        s = load_hourly_cf(year, \"solar\", method=method).capacity_factor\n",
+    "        w = fn.load_hourly_cf(year, \"wind\", method=method).capacity_factor\n",
+    "        s = fn.load_hourly_cf(year, \"solar\", method=method).capacity_factor\n",
     "        p = power_for_regions(s, w, facilities)\n",
     "        site_power_list.append(p)\n",
     "    site_power = xr.concat(site_power_list, dim=\"time\")\n",
