Comparing REZ and site power

--- a/7_REZ_power.ipynb
+++ b/7_REZ_power.ipynb
@@ -810,6 +810,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 158,
+   "id": "42a3822c-f61f-4084-b84c-4cd05baed936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_path = \"/g/data/w42/dr6273/work/data/Open_NEM/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "ff9aaa2f-bdbc-4d99-a668-3c6de1aa696b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "facilities = {\n",
+    "    'NSW': pd.read_csv(gen_path+\"edited/facilities_solar_wind_NSW_edited.csv\"),\n",
+    "    'QLD': pd.read_csv(gen_path+\"edited/facilities_solar_wind_QLD_edited.csv\"),\n",
+    "    'SA': pd.read_csv(gen_path+\"edited/facilities_solar_wind_SA_edited.csv\"),\n",
+    "    'VIC': pd.read_csv(gen_path+\"edited/facilities_solar_wind_VIC_edited.csv\"),\n",
+    "    'TAS': pd.read_csv(gen_path+\"edited/facilities_solar_wind_TAS_edited.csv\"),\n",
+    "    'WEM': pd.read_csv(gen_path+\"edited/facilities_solar_wind_WEM_edited.csv\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "789a9a7f-29f7-46b0-8dfe-231d4671c472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_REZ_for_state(ds, state):\n",
+    "    \"\"\"\n",
+    "    Return list of REZ names for state\n",
+    "    \n",
+    "    ds: dataset with REZ dimension\n",
+    "    state: str, code or for state e.g. NSW, SA\n",
+    "    \"\"\"\n",
+    "    return [i for i in ds.region.values if i[0] == state[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "dce45fc1-bd97-4e3a-9537-d2d1b722eac6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1696"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gen.loc[get_REZ_for_state(mask, \"NSW\")][\"Existing_wind\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "fa60d5ea-3b64-4531-ac47-2e49bff673b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2568.46"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "facilities[\"NSW\"].where(facilities[\"NSW\"][\"Technology\"] == \"Wind\")[\"Generator Capacity (MW)\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "0b14f672-c306-4164-be48-bb9a26ebd71c",
    "metadata": {},
