Sites outside REZs masks

--- a/8_compare_power.ipynb
+++ b/8_compare_power.ipynb
@@ -711,9 +711,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cf064556-0bb3-418d-9202-02088cb78e92",
+   "metadata": {},
+   "source": [
+    "## Combined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dffda09-e5ac-4c94-81e2-f3d8c0a0b9ea",
+   "metadata": {},
+   "source": [
+    "Some sites are outside REZs. What happens when we add REZ power to power from sites outside REZs?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "661a55b4-d937-45e8-96ec-84d329ed1f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solar_outside = solar_site_mask.where(solar_site_plus_rez == 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "40b0f78d-9b1b-410f-ac27-a5e59952a4d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solar_outside = solar_outside.where(solar_outside > 0, drop=False).to_dataset(name=\"solar_site\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "c9d4f47e-9fc2-4001-84a5-c787bc338327",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solar_outside.to_netcdf(\n",
+    "    \"/g/data/w42/dr6273/work/projects/Aus_energy/production_metrics/solar/power/solar_site_outside_REZ_mask_era5.nc\",\n",
+    "    mode=\"w\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "1166e92e-9e3e-4d83-bf84-2b42574b4708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wind_outside = wind_site_mask.where(wind_site_plus_rez == 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "id": "00d71e5d-792b-451b-8df2-be6046a00611",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wind_outside = wind_outside.where(wind_outside > 0, drop=False).to_dataset(name=\"wind_site\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "id": "0ee83af4-1577-47f4-a96e-bc7f0db2de50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wind_outside.to_netcdf(\n",
+    "    \"/g/data/w42/dr6273/work/projects/Aus_energy/production_metrics/wind/power/wind_site_outside_REZ_mask_era5.nc\",\n",
+    "    mode=\"w\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69bb80e7-5ad9-4ca2-8708-44d1c763b9da",
+   "id": "c46546ec-1162-48cc-b393-297a303d16bf",
    "metadata": {},
    "outputs": [],
    "source": []
