clear output, change date range

--- a/3_solar_capacity_factor.ipynb
+++ b/3_solar_capacity_factor.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d11f1cb7-4bc1-413f-a31f-5a93eb872c64",
    "metadata": {},
    "outputs": [],
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2afe4fa2-0c6c-481c-a7ff-89faf1adc9ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "# One node on Gadi has 48 cores - try and use up a full node before going to multiple nodes (jobs)\n",
     "\n",
-    "walltime = \"01:00:00\"\n",
+    "walltime = \"00:20:00\"\n",
     "cores = 24\n",
     "memory = str(4 * cores) + \"GB\"\n",
     "\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a6316e6a-6a7c-465e-8ae8-d6ee4cbbbb1c",
    "metadata": {},
    "outputs": [],
@@ -84,148 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d7a22723-7e10-4eac-874b-2af5b624a0df",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
-       "    <div style=\"margin-left: 48px;\">\n",
-       "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-c834adc9-3ac1-11ef-a614-00000790fe80</p>\n",
-       "        <table style=\"width: 100%; text-align: left;\">\n",
-       "\n",
-       "        <tr>\n",
-       "        \n",
-       "            <td style=\"text-align: left;\"><strong>Connection method:</strong> Cluster object</td>\n",
-       "            <td style=\"text-align: left;\"><strong>Cluster type:</strong> dask_jobqueue.PBSCluster</td>\n",
-       "        \n",
-       "        </tr>\n",
-       "\n",
-       "        \n",
-       "            <tr>\n",
-       "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
-       "                </td>\n",
-       "                <td style=\"text-align: left;\"></td>\n",
-       "            </tr>\n",
-       "        \n",
-       "\n",
-       "        </table>\n",
-       "\n",
-       "        \n",
-       "            <button style=\"margin-bottom: 12px;\" data-commandlinker-command=\"dask:populate-and-launch-layout\" data-commandlinker-args='{\"url\": \"/proxy/8787/status\" }'>\n",
-       "                Launch dashboard in JupyterLab\n",
-       "            </button>\n",
-       "        \n",
-       "\n",
-       "        \n",
-       "            <details>\n",
-       "            <summary style=\"margin-bottom: 20px;\"><h3 style=\"display: inline;\">Cluster Info</h3></summary>\n",
-       "            <div class=\"jp-RenderedHTMLCommon jp-RenderedHTML jp-mod-trusted jp-OutputArea-output\">\n",
-       "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\">\n",
-       "    </div>\n",
-       "    <div style=\"margin-left: 48px;\">\n",
-       "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">PBSCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">de9a932e</p>\n",
-       "        <table style=\"width: 100%; text-align: left;\">\n",
-       "            <tr>\n",
-       "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
-       "                </td>\n",
-       "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Workers:</strong> 0\n",
-       "                </td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Total threads:</strong> 0\n",
-       "                </td>\n",
-       "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Total memory:</strong> 0 B\n",
-       "                </td>\n",
-       "            </tr>\n",
-       "            \n",
-       "        </table>\n",
-       "\n",
-       "        <details>\n",
-       "            <summary style=\"margin-bottom: 20px;\">\n",
-       "                <h3 style=\"display: inline;\">Scheduler Info</h3>\n",
-       "            </summary>\n",
-       "\n",
-       "            <div style=\"\">\n",
-       "    <div>\n",
-       "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
-       "        <div style=\"margin-left: 48px;\">\n",
-       "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-d148f925-2787-4f20-9430-77f2ecb879ca</p>\n",
-       "            <table style=\"width: 100%; text-align: left;\">\n",
-       "                <tr>\n",
-       "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://10.6.121.6:34017\n",
-       "                    </td>\n",
-       "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Workers:</strong> 0\n",
-       "                    </td>\n",
-       "                </tr>\n",
-       "                <tr>\n",
-       "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
-       "                    </td>\n",
-       "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Total threads:</strong> 0\n",
-       "                    </td>\n",
-       "                </tr>\n",
-       "                <tr>\n",
-       "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Started:</strong> Just now\n",
-       "                    </td>\n",
-       "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Total memory:</strong> 0 B\n",
-       "                    </td>\n",
-       "                </tr>\n",
-       "            </table>\n",
-       "        </div>\n",
-       "    </div>\n",
-       "\n",
-       "    <details style=\"margin-left: 48px;\">\n",
-       "        <summary style=\"margin-bottom: 20px;\">\n",
-       "            <h3 style=\"display: inline;\">Workers</h3>\n",
-       "        </summary>\n",
-       "\n",
-       "        \n",
-       "\n",
-       "    </details>\n",
-       "</div>\n",
-       "\n",
-       "        </details>\n",
-       "    </div>\n",
-       "</div>\n",
-       "            </details>\n",
-       "        \n",
-       "\n",
-       "    </div>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<Client: 'tcp://10.6.121.6:34017' processes=0 threads=0, memory=0 B>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6fd7c08d-be1b-4355-a855-1f864e3423ed",
    "metadata": {},
    "outputs": [],
@@ -238,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "69e182d7-741b-48dc-9371-c285073e065a",
    "metadata": {},
    "outputs": [],
@@ -256,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "97b7891b-fd2c-4a64-a7a8-2f2c9a1ac542",
    "metadata": {},
    "outputs": [],
@@ -279,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b372fe0d-159d-4a62-9fb0-df29f18eb703",
    "metadata": {},
    "outputs": [],
@@ -298,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b6d49654-330b-44d9-ac62-7c15cf1c033c",
    "metadata": {},
    "outputs": [],
@@ -325,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d1052fce-1e5d-4e56-84d1-fed97934ef41",
    "metadata": {},
    "outputs": [],
@@ -342,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fb4bb6e6-e497-4a01-88f1-e7a7f3d38df3",
    "metadata": {},
    "outputs": [],
@@ -366,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "453e67d8-49bb-4a2b-bb6a-f627de512dde",
    "metadata": {},
    "outputs": [],
@@ -390,17 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "88f0e51a-92ee-4d9b-8b1f-c7c2ba31120b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "years = range(1961, 2024)"
+    "years = range(1940, 2024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4e7f38ae-84d8-46c5-8494-63aa7147a64c",
    "metadata": {},
    "outputs": [],
@@ -410,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9fb4eefe-58a5-45b4-abda-4582f6b21d8f",
    "metadata": {},
    "outputs": [],
@@ -420,29 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "882408d9-c9af-4181-b6eb-f3f0c9409866",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1965\n",
-      "1970\n",
-      "1975\n",
-      "1980\n",
-      "1985\n",
-      "1990\n",
-      "1995\n",
-      "2000\n",
-      "2005\n",
-      "2010\n",
-      "2015\n",
-      "2020\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for year in years:\n",
     "    if year % 5 == 0:\n",
@@ -490,11 +340,11 @@
     "    encoding = {\n",
     "        \"capacity_factor\": {\"dtype\": \"float32\"}\n",
     "    }\n",
-    "    cf.to_netcdf(\n",
-    "        write_path + \"/solar_capacity_factor_van_der_Wiel_era5_hourly_\" + str(year) + \"_Aus.nc\",\n",
-    "        mode=\"w\",\n",
-    "        encoding=encoding\n",
-    "    )"
+    "    # cf.to_netcdf(\n",
+    "    #     write_path + \"/solar_capacity_factor_van_der_Wiel_era5_hourly_\" + str(year) + \"_Aus.nc\",\n",
+    "    #     mode=\"w\",\n",
+    "    #     encoding=encoding\n",
+    "    # )"
    ]
   },
   {
@@ -517,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "54413d77-d4aa-4e85-a21b-1155afe66b95",
    "metadata": {},
    "outputs": [],
@@ -528,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "d404c60e-68fb-41f1-b034-7b5e8592770a",
    "metadata": {},
    "outputs": [],
@@ -538,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "5b9fa334-1eba-4295-947d-08bf4ae27c46",
    "metadata": {},
    "outputs": [],
@@ -583,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0e530057-3185-49b6-832e-01dd4e1512f5",
    "metadata": {},
    "outputs": [],
