Ran power computations for all scenarios with new weighting

--- a/7_REZ_power.ipynb
+++ b/7_REZ_power.ipynb
@@ -24,22 +24,11 @@
    "execution_count": 2,
    "id": "110fe4e4-c193-41f5-a258-b9de322e105f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 40981 instead\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# One node on Gadi has 48 cores - try and use up a full node before going to multiple nodes (jobs)\n",
     "\n",
-    "walltime = \"00:10:00\"\n",
+    "walltime = \"00:50:00\"\n",
     "cores = 48\n",
     "memory = str(4 * cores) + \"GB\"\n",
     "\n",
@@ -77,7 +66,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-fae07bca-6a61-11ef-9e72-000007c6fe80</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-562953e8-6a8c-11ef-8912-000007bbfe80</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -90,7 +79,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"/proxy/40981/status\" target=\"_blank\">/proxy/40981/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -99,7 +88,7 @@
        "        </table>\n",
        "\n",
        "        \n",
-       "            <button style=\"margin-bottom: 12px;\" data-commandlinker-command=\"dask:populate-and-launch-layout\" data-commandlinker-args='{\"url\": \"/proxy/40981/status\" }'>\n",
+       "            <button style=\"margin-bottom: 12px;\" data-commandlinker-command=\"dask:populate-and-launch-layout\" data-commandlinker-args='{\"url\": \"/proxy/8787/status\" }'>\n",
        "                Launch dashboard in JupyterLab\n",
        "            </button>\n",
        "        \n",
@@ -112,11 +101,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">PBSCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">f41420b4</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">dfe496b3</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"/proxy/40981/status\" target=\"_blank\">/proxy/40981/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 0\n",
@@ -143,11 +132,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-1dcc04bf-3733-44fb-82e8-5297cae1bd29</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-9a822063-9983-4c2e-9b10-6d31b904d63b</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://10.6.121.8:38487\n",
+       "                        <strong>Comm:</strong> tcp://10.6.121.4:43581\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0\n",
@@ -155,7 +144,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"/proxy/40981/status\" target=\"_blank\">/proxy/40981/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 0\n",
@@ -193,7 +182,7 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.6.121.8:38487' processes=0 threads=0, memory=0 B>"
+       "<Client: 'tcp://10.6.121.4:43581' processes=0 threads=0, memory=0 B>"
       ]
      },
      "execution_count": 4,
@@ -606,7 +595,73 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b9bb2df-ac56-4074-99a0-6a04548ba869",
+   "id": "8f0ebf81-e5cb-4cea-90c8-78648f098a76",
+   "metadata": {},
+   "source": [
+    "### Pre-compute capacity factor averages:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ebb57503-1fc1-400c-b179-07d011e12cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_mean_cf(years, gen_type, method=\"van_der_Wiel\", chunks=None):\n",
+    "    \"\"\"\n",
+    "    Return mean capacity factor over all years\n",
+    "    \n",
+    "    gen_type: str, 'wind' or 'solar'\n",
+    "    method: str, method used to compute capacity factor, e.g. 'van_der_Wiel'\n",
+    "    chunks: dict, how to chunk. Default is None\n",
+    "    \"\"\"\n",
+    "    da_list = []\n",
+    "    for year in years:\n",
+    "        cf = fn.load_hourly_cf(year, gen_type, method=method, chunks={\"lat\": 75, \"lon\": 100, \"time\": -1}).capacity_factor\n",
+    "        cf = cf.mean(\"time\").expand_dims({\"time\": [year]})\n",
+    "        da_list.append(cf)\n",
+    "    cf = xr.concat(da_list, dim=\"time\")\n",
+    "    return cf.mean(\"time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0c7c55cd-ad51-4575-9396-9698f17d808e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp = \"/g/data/w42/dr6273/work/projects/Aus_energy/production_metrics/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "68b1250e-7361-443c-ade2-68ca5063d7c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "years = range(1940, 2024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a4d7bbb1-f527-4e3c-8fb3-ee041187a70f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for gen_type in [\"wind\", \"solar\"]:\n",
+    "#     mean_cf = calculate_mean_cf(years, gen_type)\n",
+    "#     mean_cf.to_dataset(name=\"capacity_factor\").to_netcdf(\n",
+    "#         fp + gen_type + \"_mean_capacity_factor_van_der_Wiel_era5_hourly_\" + str(years[0]) + \"-\" + str(years[-1]) + \".nc\"\n",
+    "#     )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3b4bc74-8e35-4bd2-90e3-1fc364cb5e91",
    "metadata": {},
    "source": [
     "# Compute generation"
@@ -614,12 +669,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "07af249d-6c3f-44d1-90bf-9d2b63224a2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_scaled_capacity_mask(mask_da, generation):\n",
+    "def get_even_capacity_mask(mask_da, generation):\n",
     "    \"\"\"\n",
     "    Return DataArray with mask of capacity divided evenly across grid cells\n",
     "    \n",
@@ -643,7 +698,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
+   "id": "c8898724-1b02-4519-93f4-b8c32c61d12e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_cf_scaled_capacity_mask(cf_mean, mask_da, generation):\n",
+    "    \"\"\"\n",
+    "    Return DataArray with mask of capacity divided according to weights from average capacity factor\n",
+    "    \n",
+    "    cf_mean: array of capacity factor weights\n",
+    "    mask_da: array of REZ mask\n",
+    "    generation: pandas Series of capacity values for each region (index).\n",
+    "    \"\"\"\n",
+    "    da_list = []\n",
+    "    for r in generation.index:\n",
+    "        capacity = generation.loc[r]\n",
+    "        \n",
+    "        cf_region = cf_mean.where(\n",
+    "            mask_da.sel(region=r) == 1,\n",
+    "            drop=True\n",
+    "        )\n",
+    "        weights = cf_region / cf_region.sum()\n",
+    "        \n",
+    "        tolerance = 0.01\n",
+    "        if 1 - weights.sum().values > tolerance:\n",
+    "            print(weights.sum().values)\n",
+    "            raise ValueError(\"Weights don't sum to one.\")\n",
+    "            \n",
+    "        da = (weights * capacity).expand_dims({\"REZ\": [r]})\n",
+    "        \n",
+    "        da_list.append(da)\n",
+    "        \n",
+    "    return xr.concat(da_list, dim=\"REZ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "2e35a159-901f-4d5c-8ec4-8fe6c3282629",
    "metadata": {},
    "outputs": [],
@@ -671,19 +763,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "5ea96f76-cd3d-4c70-a8d1-21dfc64d95ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_all_years_generation(years, mask_da, generation, scale_mask=True, method=\"van_der_Wiel\"):\n",
+    "def calc_all_years_generation(years, mask_da, generation, scale_mask=\"capacity_factor\", method=\"van_der_Wiel\"):\n",
     "    \"\"\"\n",
     "    Compute power time series for each REZ and each year.\n",
     "    \n",
     "    years: range\n",
     "    facilities: dict of facilities data in dataframe\n",
     "    method: str, which method of capacity factors was used\n",
-    "    scale_mask: bool, whether to scale mask_da by generation. Otherwise uses mask_da\n",
+    "    scale_mask: str, 'capacity_factor' to scale by mean capacity factors,\n",
+    "        'even' for an even distribution of generation amongst REZ cells,\n",
+    "        'none' to use mask_da directly.\n",
     "    \"\"\"\n",
     "    def _get_gen_type(gen):\n",
     "        g_split = gen.name.split(\"_\")\n",
@@ -698,8 +792,18 @@
     "        return gt\n",
     "    \n",
     "    gen_type = _get_gen_type(generation)\n",
-    "    if scale_mask: # Divide the generation capacity by the size of the region and assign each cell that number\n",
-    "        gen_capacity = get_scaled_capacity_mask(mask_da, generation)\n",
+    "    \n",
+    "    if scale_mask == \"capacity_factor\": # Use mean capacity factor weights to split the generation capacities by\n",
+    "        mean_cf = xr.open_dataset(\n",
+    "            \"/g/data/w42/dr6273/work/projects/Aus_energy/production_metrics/\" + \\\n",
+    "            gen_type + \"_mean_capacity_factor_van_der_Wiel_era5_hourly_\" + str(years[0]) + \"-\" + str(years[-1]) + \".nc\"\n",
+    "        )[\"capacity_factor\"]\n",
+    "        \n",
+    "        gen_capacity = get_cf_scaled_capacity_mask(mean_cf, mask_da, generation)\n",
+    "        \n",
+    "    elif scale_mask == \"even\": # Divide the generation capacity by the size of the region and assign each cell that number\n",
+    "        gen_capacity = get_even_capacity_mask(mask_da, generation)\n",
+    "        \n",
     "    else: # Just use mask_da as the generation capacities for each cell\n",
     "        gen_capacity = mask_da.copy()\n",
     "    \n",
@@ -716,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 21,
    "id": "565eacd7-1166-49f5-bb83-ef695f653ebd",
    "metadata": {},
    "outputs": [],
@@ -726,48 +830,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "0c7c55cd-ad51-4575-9396-9698f17d808e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fp = \"/g/data/w42/dr6273/work/projects/Aus_energy/production_metrics/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "68b1250e-7361-443c-ade2-68ca5063d7c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "years = range(1940, 2024)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
-   "id": "7abb0d12-04de-4628-9972-5ea491b76a56",
+   "execution_count": 23,
+   "id": "33a56215-7940-4a4c-a2a1-382d375bca3b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22"
+       "Index(['Progressive_wind_2039-40', 'Progressive_wind_2049-50',\n",
+       "       'Step_change_wind_2029-30', 'Step_change_wind_2039-40',\n",
+       "       'Step_change_wind_2049-50', 'Green_energy_wind_2029-30',\n",
+       "       'Green_energy_wind_2039-40', 'Green_energy_wind_2049-50'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(gen.columns)"
+    "gen.columns[14:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 24,
    "id": "b198a08e-a96b-4350-845d-ec1a97282ba4",
    "metadata": {},
    "outputs": [
@@ -775,13 +863,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step_change_solar_2039-40\n",
-      "Step_change_solar_2049-50\n",
-      "Green_energy_solar_2029-30\n",
-      "Green_energy_solar_2039-40\n",
-      "Green_energy_solar_2049-50\n",
-      "Existing_wind\n",
-      "Progressive_wind_2029-30\n",
       "Progressive_wind_2039-40\n",
       "Progressive_wind_2049-50\n",
       "Step_change_wind_2029-30\n",
@@ -790,14 +871,15 @@
       "Green_energy_wind_2029-30\n",
       "Green_energy_wind_2039-40\n",
       "Green_energy_wind_2049-50\n",
-      "CPU times: user 39min 11s, sys: 2min 2s, total: 41min 14s\n",
-      "Wall time: 41min 7s\n"
+      "CPU times: user 18min 15s, sys: 52.3 s, total: 19min 7s\n",
+      "Wall time: 19min 24s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for scenario in gen.columns[7:]:\n",
+    "for scenario in gen.columns[14:]:\n",
+    "# for scenario in [\"Existing_wind\", \"Existing_solar\"]:\n",
     "    print(scenario)\n",
     "    gen_ds = calc_all_years_generation(years, mask, gen[scenario])\n",
     "    gen_ds = gen_ds.to_dataset(name=\"power\")\n",
@@ -822,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "id": "c9d4f47e-9fc2-4001-84a5-c787bc338327",
    "metadata": {},
    "outputs": [],
@@ -836,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 97,
    "id": "0ee83af4-1577-47f4-a96e-bc7f0db2de50",
    "metadata": {},
    "outputs": [],
@@ -849,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "id": "08e25dc1-d8b4-472a-8c95-04b6367faa54",
    "metadata": {},
    "outputs": [
@@ -865,7 +947,7 @@
    "source": [
     "for scenario, m in zip(['Existing_solar', 'Existing_wind'], [solar_outside, wind_outside]):\n",
     "    print(scenario)\n",
-    "    gen_ds = calc_all_years_generation(years, m, gen[scenario], scale_mask=False)\n",
+    "    gen_ds = calc_all_years_generation(years, m, gen[scenario], scale_mask=\"none\")\n",
     "    gen_ds = gen_ds.to_dataset(name=\"power\")\n",
     "    \n",
     "    # Tidy path to write\n",
@@ -891,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "51a6eef2-db8b-45b9-99e6-9019c29b0ae7",
    "metadata": {},
    "outputs": [],
@@ -899,6 +981,14 @@
     "client.close()\n",
     "cluster.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bd2fc7f-1abf-449c-a568-36176a1c0db9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
